# colonia

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.consumer  Makefile  README.md  alembic.ini  api.py  api.py.bak  colonia.yaml  database.py  docker-compose.full.yml  docker-compose.yml  main.py  pyproject.toml  pytest.toml  rabbitmq.py  repo-scan.py
alembic/: env.py
app/: api.py  backend_storage.py  config.py  database.py  main.py  rabbitmq.py  vault.py
consumers/: repo-scan.py
models/: __init__.py  backend_storage.py  context.py  context_env_var.py  context_environment.py  context_secret.py  context_stack.py  environment.py  project.py  stack.py  stack_environment.py  team.py  team_member.py  team_permission.py  user.py
template/: dashboard.html.tpl  projects.html.tpl  settings.html.tpl  stacks.html.tpl
templates/: contexts.html.tpl  dashboard.html  dashboard.html.tpl  environments.html.tpl  projects.html.tpl  settings.html.tpl  settings_ai_integration.html.tpl  settings_backend_storage.html.tpl  settings_container_registry.html.tpl  settings_database_integration.html.tpl  settings_github_integration.html.tpl  settings_gitlab_integration.html.tpl  settings_infracost.html.tpl  settings_rabbitmq_integration.html.tpl  settings_redis_integration.html.tpl  settings_secrets_vault.html.tpl  stacks.html.tpl  teams.html.tpl  users.html.tpl
tests/: test_api.py  test_context_attachments.py  test_contexts_api.py  test_example.py  test_models.py  test_new_models.py  test_rabbitmq.py  test_repo_scan.py  test_stacks_api.py  test_stats_api.py  test_trigger_scan.py
(+31 files in other folders)
