[project]
name = "colonia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # Using a specific tag
    "rupy-api @ git+https://github.com/manoelhc/rupy.git@v0.1.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
]
